public enum ChipType {
    RED,
    GREEN,
    BLUE,
    BLACK,
    WHITE
}
